src/objects/SPE_ScorecardTempValues__c.object
<CustomObject>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrunchedScores__c</fullName>
        <label>Crunched Scores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfExecution__c</fullName>
        <formula>if( Tracker_Score__c==&apos;&apos;, SPETracker__r.SPETracker__r.DateOfExecution__c, Tracker_Score__r.SPETracker__r.DateOfExecution__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateOfExecution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProjectlevel__c</fullName>
        <formula>if(!CONTAINS( TEXT(SPE_Plan__r.Project__c) , &apos;All&apos;) &amp;&amp;  SPETracker__c !=null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsProjectlevel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Value__c</fullName>
        <formula>SPETracker__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>MarketUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker values</label>
        <referenceTo>SPE_TrackerValues__c</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_TemplateName__c</fullName>
        <label>SPE Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <description>IF(Tracker_Score__c=&apos;&apos;, SPETracker__r.Score1__c,  Tracker_Score__r.Score__c )</description>
        <formula>IF(Tracker_Score__c!=&apos;&apos;,Tracker_Score__r.Score__c,if(SPETracker__c!=&apos;&apos;,SPETracker__r.Score1__c, CrunchedScores__c ) )</formula>
        <label>Score1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ScoreCard</label>
        <referenceTo>SPE_ScoreCard__c</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Weight__c</fullName>
        <formula>IF( ISNULL(Weight__c ) || ISBLANK(Weight__c ),  Score1__c ,  Weight__c * Score1__c)</formula>
        <label>Score*Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>SPETracker__r.Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracker_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Score</label>
        <referenceTo>SPE_TrackerScore__c</referenceTo>
        <relationshipLabel>SPE_ScorecardTempValues</relationshipLabel>
        <relationshipName>SPE_ScorecardTempValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>SPE_ScorecardTempValues</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>SPE_ScorecardTempValues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE_ScorecardTempValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>